2014-03-04 Basic Math Gaps module: Fixed navigation arrows showing up when clicking on the input and fixed alert error in Editor when Is Equation flag has been set to true
2014-03-04 Fixed issue with external links in Text module.
2014-03-04 Fixed few bugs in eKeyboard i.a. on mobile devices system keyboard will not display anymore, added draggable
2014-03-04 Drag'n'drop with multiple gap fixed, no more doubled images.
2014-03-03 New addon: Count and Graph
2014-02-28 Add CSS class for selected page number in Table of Contents addon.
2014-02-26 Fixed problem with scoring and events in Hangman addon.
2014-02-21 Fixed problem with numeration of pages in Table Of Contents addon.
2014-02-21 New modules: Basic Math Gaps and eKeyboard
2014-02-21 PlayerUtils return mistake count also
2014-02-20 Support for dragging in multiple gap
2014-02-19 Fixed problem withpage move notification
2014-02-18 Fixed problem with scoring method when module LineNumber was not activity
2014-02-18 PlayerUtils extended to return score for individual pages
2014-02-18 Fixed problem with empty text on chrome browser
2014-02-17 Fixed problem with localized property names
2014-02-17 Added new property for additional classes in popup
2014-02-13 Added API interface to get table of contents
2014-02-13 Fixed problem with exception thrown to JavaScript console at presentation start
2014-02-13 Fixed problem with blocking popup button after check+reset combination
2014-02-13 Don't allow opening the popup twice
2014-02-11 Different handling for d&d on mobile devices and PC
2014-02-10 Fixed problem with d&d
2014-02-06 Fixed problem with page progress on not reportable page
2014-02-05 Added drag and drop support to image source and image gap
2014-02-05 Added drag and drop support to source list and text modules
2014-02-05 Added custom css support for plots in Plot module
2014-02-04 Fixed state restoring after clicking Reset button in Memo Game module